Updated project with new changes

--- a/Article/vercel.json
+++ b/Article/vercel.json
@@ -1,14 +1,12 @@
 {
-    "builds": [{
-        "src": "Article/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.51830" }
-    },
-    {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "staticfiles_build" }
-    }],
+    "version": 2,
+    "builds": [
+        {
+            "src": "Article/wsgi.py",
+            "use": "@vercel/python",
+            "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+        }
+    ],
     "routes": [
         {
             "src": "/static/(.*)",
