Updated project with new changes

--- a/Article/vercel.json
+++ b/Article/vercel.json
@@ -1,20 +1,17 @@
 {
-    "version": 2,
     "builds": [
         {
             "src": "Article/wsgi.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+            "use": "@vercel/python"
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": { "distDir": "staticfiles_build" }
         }
     ],
     "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "Article/wsgi.py"
-        }
+        { "src": "/static/(.*)", "dest": "/static/$1" },
+        { "src": "/(.*)", "dest": "Article/wsgi.py" }
     ]
 }
